adds jquery functionality

--- a/index.html
+++ b/index.html
@@ -11,11 +11,31 @@
 	<body>
 		<h1>Here is the demo!</h1>
 		<img src="pictures/31.jpg"
-			alt="What's up doc? Poster">
+			alt="What's up doc? Poster"
+			class="specialImage">
 		<img src="pictures/4.jpg"
 			alt="Love far from home">
 		<img src="pictures/6.jpg"
 			alt="My place has disappeared">
+		<button class="imgAdder">a great button</button>
+		<div class="end">
+		
+		</div>
+
+
+
+
+
+
+
+<!-- the code.jquery.com code base -->
+		<script
+  			src="http://code.jquery.com/jquery-3.3.1.min.js"
+  			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  			crossorigin="anonymous"></script>
+		<script src="script.js"></script>
+		
+		
 	</body>
 
 </html>
